# SpendHelm

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  env.sample  main.py  pyproject.toml
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  runserver.py
backend/src/app/: main.py
backend/src/app/aggregates/: jobs.py  model.py  repository.py  router.py  schemas.py  service.py
backend/src/app/auth/: __init__.py  dependencies.py  model.py  repository.py  router.py  schemas.py  (+2 more)
backend/src/migrations/: env.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: CTASection.tsx  Footer.tsx  HeroSection.tsx  Navigation.tsx  ProductPreview.tsx  TrustSection.tsx  ValueSection.tsx
frontend/components/dashboard/: loading-spinner.tsx  mobile-header.tsx  mobile-menu.tsx  sidebar.tsx
frontend/components/expenses/: edit-dialog.tsx  expense-row.tsx
frontend/components/ui/: MockExpenseRow.tsx  MockStatCard.tsx  ValueCard.tsx  form.tsx  label.tsx
frontend/lib/: auth.ts
frontend/lib/api/: categories.ts  dashboard.ts  expenses.ts  preferences.ts
frontend/lib/data/: navigation.ts
frontend/lib/hooks/: use-auth.ts  use-login.ts  use-register.ts
frontend/lib/types/: analytics.ts  categories.ts  dashboard.ts  expenses.ts  preferences.ts
frontend/lib/utils/: analytics.ts
frontend/lib/validators/: auth.ts
(+73 files in other folders)
